[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "color_manager_nicklasvraa"
version = "0.1.0"
authors = [
  { name="Nicklas Vraa", email="nicklasvraa@proton.me" },
]
description = "A package for recoloring icon packs and themes"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nicklasvraa/color-manager"
"Bug Tracker" = "https://github.com/nicklasvraa/color-manager/issues"
